内部クラスに変更

--- a/force-app/main/default/lwc/memberSerchForm/memberSerchForm.html
+++ b/force-app/main/default/lwc/memberSerchForm/memberSerchForm.html
@@ -45,7 +45,7 @@
                 </lightning-layout-item>
                  -->
                 <lightning-layout-item padding="around-small">
-                    <lightning-button variant="search" label="Search" title="Search" onclick={handleSearch} class="slds-m-left_x-small"></lightning-button>
+                    <lightning-button variant="brand" label="Search" title="Search" onclick={handleSearch} class="slds-m-left_x-small"></lightning-button>
                 </lightning-layout-item>
             </lightning-layout>
         </div>
