--- a/force-app/main/default/lwc/treeGridCmp/treeGridCmp.html
+++ b/force-app/main/default/lwc/treeGridCmp/treeGridCmp.html
@@ -1,16 +1,19 @@
 <template>
     <div class="slds-m-top_medium slds-m-bottom_x-large">
-        <h2 class="slds-text-heading_medium slds-m-bottom_medium">
+        <!-- <h2 class="slds-text-heading_medium slds-m-bottom_medium">
             Tree Grid component with data from a static source. Click on the arrow icons to expand or collapse a branch.
-        </h2>
+        </h2> -->
 
         <!-- Simple -->
-        <div class="slds-p-around_medium lgc-bg">
-            <lightning-tree-grid
-                columns={columns}
-                data={data}
-                key-field="Id"
-            ></lightning-tree-grid>
-        </div>
+        <template if:true={tableDisp}>
+            <div class="slds-p-around_medium lgc-bg">
+                <lightning-tree-grid
+                    columns={columns}
+                    data={data}
+                    key-field="Id"
+                    row-number-offset={rowOffset}
+                ></lightning-tree-grid>
+            </div>
+        </template>
     </div>
 </template>
