--- a/force-app/main/default/lwc/memberTableCmp/memberTableCmp.html
+++ b/force-app/main/default/lwc/memberTableCmp/memberTableCmp.html
@@ -13,6 +13,8 @@
                     data={data}
                     row-number-offset={rowOffset}
                     columns={columns}
+                    onsave={handleSave}
+                    draft-values={saveDraftValues}
                 >
             </lightning-datatable>
         </template>
