--- a/force-app/main/default/lwc/memberTableCmp/memberTableCmp.html
+++ b/force-app/main/default/lwc/memberTableCmp/memberTableCmp.html
@@ -15,6 +15,7 @@
                     columns={columns}
                     onsave={handleSave}
                     draft-values={saveDraftValues}
+                    hide-checkbox-column
                 >
             </lightning-datatable>
         </template>
