--- a/force-app/main/default/lwc/memberTableCmp/memberTableCmp.html
+++ b/force-app/main/default/lwc/memberTableCmp/memberTableCmp.html
@@ -16,6 +16,8 @@
                     onsave={handleSave}
                     draft-values={saveDraftValues}
                     hide-checkbox-column
+                    max-column-width="400"
+                    min-column-width="60"
                 >
             </lightning-datatable>
         </template>
